--- a/Sources/iHealthiOS/iHealthSDK.xcframework/Info.plist
+++ b/Sources/iHealthiOS/iHealthSDK.xcframework/Info.plist
@@ -10,7 +10,7 @@
 			<key>LibraryIdentifier</key>
 			<string>ios-arm64_armv7</string>
 			<key>LibraryPath</key>
-			<string>iHealthSDK.a</string>
+			<string>iHealthSDK2.7.6.a</string>
 			<key>SupportedArchitectures</key>
 			<array>
 				<string>arm64</string>
@@ -25,7 +25,7 @@
 			<key>LibraryIdentifier</key>
 			<string>ios-arm64_x86_64-simulator</string>
 			<key>LibraryPath</key>
-			<string>iHealthSDK.a</string>
+			<string>iHealthSDK2.7.6.a</string>
 			<key>SupportedArchitectures</key>
 			<array>
 				<string>arm64</string>
